--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>淘宝网</title>
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/headerWebNav.css">
+  <link rel="stylesheet" href="css/headerSearch.css">
+  <link rel="stylesheet" href="css/contentLeftSearch.css">
+  <link rel="stylesheet" href="css/cententCenterPart.css">
+  <link rel="stylesheet" href="css/cententCenterPart.css">
+  <link rel="stylesheet" href="css/contentRightPart.css">
+  <link rel="stylesheet" href="css/rightNav.css">
+  <link rel="stylesheet" href="css/rightModule.css">
+  <link rel="stylesheet" href="css/yhhPart.css">
+  <link rel="stylesheet" href="css/mrhd&tbzbPart.css">
+  <link rel="stylesheet" href="css/cnxhPart.css">
+  <link rel="stylesheet" href="css/mrhdPart.css">
+  <link rel="stylesheet" href="css/rmdpPart.css">
+  <link rel="stylesheet" href="css/tshwPart.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/mobile.css">
